syntax = "proto3";

package ingress;

option go_package = "github.com/vorteil/direktiv/pkg/ingress";

import "google/protobuf/timestamp.proto";

message GetNamespaceLogsRequest {
	optional string namespace = 1;
	optional int32 offset = 2;
	optional int32 limit = 3;
}

message GetNamespaceLogsResponse {
	message NamespaceLog {
		optional string id = 1;
		optional string level = 2;
		optional google.protobuf.Timestamp timestamp = 3;
		optional string message = 4;
		map<string,string> context = 5;
	}
	repeated NamespaceLog namespaceLogs = 1;
	optional int32 offset = 2;
	optional int32 limit = 3;
}